--- a/style.css
+++ b/style.css
@@ -231,13 +231,13 @@ footer {
 
     .main-image {
         /* 📍 Максимальная ширина для главного изображения в % */
-        max-width: 750px;
-        width: 100%;
+        
+        max-width: 100%;
     }
 
     .text-wrapper {
         /* 📍 Максимальная ширина для блока с текстом */
-        max-width: 650px;
+        max-width: 560px;
     }
 
     .about-section {
